--- a/EqUiWebUi/Web.DEV_VCCH.config
+++ b/EqUiWebUi/Web.DEV_VCCH.config
@@ -11,7 +11,7 @@
 
   <appSettings>
     <!--global-->
-    <add key="SiteName" value="VCCH EQUI (Charleston)" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SiteName" value="DEVELOPMENT VCCH EQUI (Charleston)" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="EnableHangfire" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="DisabledAreas" value="PJV;VWSC;WELDING;PlcSupervisie;STW040;VCSC;STO;CycleTime" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
