--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -817,6 +817,9 @@
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Welding\Models\rt_weldmeasureprotddw.cs">
+      <DependentUpon>WeldingModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Welding\Models\searchplanNbr.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Welding\Models\SpotIdentMeasurements.cs">
@@ -2277,7 +2280,6 @@
     <Content Include="App_Code\TiplifeHtmlHelpers.cshtml" />
     <Content Include="Areas\Tiplife\Views\Electrode\Index.cshtml" />
     <Content Include="Areas\Tiplife\Views\Electrode\_Legend.cshtml" />
-
     <Content Include="Areas\Alert\Views\c_triggers\_Wiki.cshtml" />
     <Content Include="Areas\Tiplife\Views\NgacElectrode\Tcp_log.cshtml" />
     <Content Include="Areas\Tiplife\Views\NgacElectrode\_Tcp_logGrid.cshtml" />
@@ -2285,9 +2287,9 @@
     <Content Include="Areas\Tiplife\Views\ComauElectrode\Tcp_log.cshtml" />
     <Content Include="Areas\Tiplife\Views\ComauElectrode\_Tipinfo.cshtml" />
     <Content Include="Areas\PlcSupervisie\Views\Screenshot\Screenshots.cshtml" />
+    <Content Include="Areas\Welding\Views\Qteam\_SearchplanNbr.cshtml" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
-
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
     <Content Include="Areas\Welding\Views\ARO\Index.cshtml" />
     <Content Include="Areas\Welding\Views\WeldingGuns\Create.cshtml" />
@@ -2302,7 +2304,6 @@
     <Content Include="Areas\Welding\Views\HiddenSpot\Details.cshtml" />
     <Content Include="Areas\Welding\Views\HiddenSpot\Edit.cshtml" />
     <Content Include="Areas\Welding\Views\HiddenSpot\Index.cshtml" />
-
     <None Include="Properties\PublishProfiles\gensvw1178-DEV-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
