--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -2361,6 +2361,18 @@
     <Content Include="node_modules\moment\src\locale\zh-hk.js" />
     <Content Include="node_modules\moment\src\locale\zh-tw.js" />
     <Content Include="node_modules\moment\src\moment.js" />
+    <Content Include="node_modules\print-this\assets\css\normalize.css" />
+    <Content Include="node_modules\print-this\assets\css\skeleton.css" />
+    <Content Include="node_modules\print-this\assets\images\cat1.jpg" />
+    <Content Include="node_modules\print-this\assets\images\cat2.jpg" />
+    <Content Include="node_modules\print-this\assets\images\cat3.jpg" />
+    <Content Include="node_modules\print-this\assets\images\print.png" />
+    <Content Include="node_modules\print-this\changelog.txt" />
+    <Content Include="node_modules\print-this\dist\print-this.cjs.js" />
+    <Content Include="node_modules\print-this\dist\print-this.esm.js" />
+    <Content Include="node_modules\print-this\dist\print-this.umd.js" />
+    <Content Include="node_modules\print-this\index.html" />
+    <Content Include="node_modules\print-this\printThis.js" />
     <Content Include="node_modules\shoestring\build\config\development.js" />
     <Content Include="node_modules\shoestring\build\config\production.js" />
     <Content Include="node_modules\shoestring\build\development.js" />
@@ -2864,6 +2876,13 @@
     <Content Include="node_modules\javascript-natural-sort\.npmignore" />
     <Content Include="node_modules\javascript-natural-sort\package.json" />
     <Content Include="node_modules\javascript-natural-sort\README.md" />
+    <Content Include="node_modules\print-this\bower.json" />
+    <Content Include="node_modules\print-this\composer.json" />
+    <Content Include="node_modules\print-this\ISSUE_TEMPLATE.md" />
+    <Content Include="node_modules\print-this\LICENSE" />
+    <Content Include="node_modules\print-this\package.json" />
+    <Content Include="node_modules\print-this\printThis.jquery.json" />
+    <Content Include="node_modules\print-this\README.md" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
@@ -2915,7 +2934,6 @@
     <Content Include="Scripts\MyScripts\Interface.js" />
     <Content Include="Scripts\jquery.bootstrap-autohidingnavbar.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\printThis.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
