--- a/EqUiWebUi/package.json
+++ b/EqUiWebUi/package.json
@@ -6,6 +6,8 @@
     "codemirror": "^5.34.0",
     "daterangepicker": "^3.0.3",
     "jquery-jeditable": "^2.0.6",
+    "moment": "^2.23.0",
+    "print-this": "^1.14.1",
     "tablesaw": "^3.1.0"
   }
 }
