--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -79,6 +79,7 @@
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.5.1" />
     <!--authorization-->
+    <authentication mode="Windows"/>
     <authorization>
       <allow users="*" />
     </authorization>
