--- a/EqUiWebUi/Web.Rel_VCG.config
+++ b/EqUiWebUi/Web.Rel_VCG.config
@@ -12,7 +12,7 @@
 
   <appSettings>
     <!--global-->
-    <add key="SiteName" value="VCGA EQUI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SiteName" value="VCG EQUI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="EnableHangfire" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine;sto" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="DisabledAreas" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
