--- a/EqUiWebUi/Web.Rel_VCT.config
+++ b/EqUiWebUi/Web.Rel_VCT.config
@@ -11,7 +11,7 @@
 
   <appSettings>
     <!--global-->
-    <add key="SiteName" value="VCTA EQUI (POC)" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SiteName" value="VCT EQUI (Torslanda)" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="EnableHangfire" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="DisabledAreas" value="PJV;WELDING;PlcSupervisie;STW040;VCSC;STO" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
