--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -2881,8 +2881,10 @@
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Areas\VASC\Views\c_service_setup\sessionSetup.cshtml" />
-    <Content Include="Areas\VASC\Views\Eventlog\GetEvents.cshtml" />
-    <Content Include="Areas\VASC\Views\Eventlog\_getEvents.cshtml" />
+    <Content Include="Areas\VASC\Views\Eventlog\Get_h_alarm.cshtml" />
+    <Content Include="Areas\VASC\Views\Eventlog\_get_h_alarm.cshtml" />
+    <Content Include="Areas\VASC\Views\Eventlog\Get_rt_alarm.cshtml" />
+    <Content Include="Areas\VASC\Views\Eventlog\_get_rt_alarm.cshtml" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
