--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -2872,6 +2872,7 @@
     <Content Include="Areas\VASC\Views\Eventlog\_get_h_alarm.cshtml" />
     <Content Include="Areas\VASC\Views\Eventlog\Get_rt_alarm.cshtml" />
     <Content Include="Areas\VASC\Views\Eventlog\_get_rt_alarm.cshtml" />
+    <Content Include="Areas\Welding\Views\Welding\ppmreweld.cshtml" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
