--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -11,10 +11,8 @@
  </configSections>
  
    <connectionStrings>
-      <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
-         providerName="System.Data.SqlClient" />
-      <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-         providerName="System.Data.EntityClient" />
+      <add name="EQUIConnectionString" connectionString="Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
+      <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"  providerName="System.Data.EntityClient" />
    </connectionStrings>
 
   
@@ -30,7 +28,6 @@
   </entityFramework>
 
   <!--Log4net setup-->
-
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="EquiVsto.log" />
@@ -63,7 +60,9 @@
 
   </log4net>
   
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup><applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
+ 
+ <applicationSettings>
     <ExcelAddInEquipmentDatabase.Properties.Settings>
       <setting name="Helpfile" serializeAs="String">
         <value>https:\\sway.com\csCS9cdjEpcpPhw0?ref=Link</value>
