alert runalert now shows failure faults

--- a/EqUiWebUi/Web.DEV_VCCH.config
+++ b/EqUiWebUi/Web.DEV_VCCH.config
@@ -5,7 +5,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
     <add name="EQUIConnectionString"
-      connectionString="Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=TIPWEARPREDICT;Persist Security Info=True;Integrated Security = true"
+      connectionString="Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATAdev;Persist Security Info=True;Integrated Security = true"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
