--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -1,21 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
-  <configSections> 
+
+  <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="ExcelAddInEquipmentDatabase.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
- </configSections>
- 
-   <connectionStrings>
-      <add name="EQUIConnectionString" connectionString="Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
-      <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;persist security info=True;user id=EqUiAdmin;password=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;"  providerName="System.Data.EntityClient" />
-   </connectionStrings>
+  </configSections>
 
-  
+  <connectionStrings>
+    <add name="EQUIConnectionString" connectionString="Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
+    <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;user id=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -51,18 +50,19 @@
         <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
       </layout>
     </appender>
-    
+
     <root>
       <level value="DEBUG" />
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="RollingFileAppender" />
     </root>
-
   </log4net>
-  
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
- 
- <applicationSettings>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+
+  <applicationSettings>
     <ExcelAddInEquipmentDatabase.Properties.Settings>
       <setting name="Helpfile" serializeAs="String">
         <value>https:\\sway.com\csCS9cdjEpcpPhw0?ref=Link</value>
@@ -78,5 +78,4 @@
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
-  
 </configuration>
