--- a/EqUiWebUi/Web.Rel_VCCH.config
+++ b/EqUiWebUi/Web.Rel_VCCH.config
@@ -15,7 +15,7 @@
     <add key="EnableHangfire" value="true" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="HangfireQueues" value="critical;default;alertengine;gadata;jobengine" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key ="DisabledAreas" value="PJV;VWSC;WELDING;PlcSupervisie;STW040;VCSC;STO;CycleTime" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key ="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key ="HangfireDetailsBasepath" value="http://chasvw1203.cha.volvocars.net/hangfire/jobs/details/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--Maximo-->
     <add key ="Maximo_ORGID" value="VCCUS1" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <!--VCCSE-->
