--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -67,10 +67,10 @@
     <add key="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" />
     <!--Maximo  MOVE THIS TO MAXIMO AREA WEB.CONFIG!-->
     <add key="Maximo_ORGID" value="VCCBE" />
-    <add key="Maximo_SiteID" value="VCG" />
-    <add key="Maximo_LOCATION_SYSTEMID" value="PRODMID" />
+    <add key="Maximo_SiteID" value="VCCH" />
+    <add key="Maximo_LOCATION_SYSTEMID" value="PRIMARY" />
     <add key="Maximo_ORG_SYSTEMID" value="ORG" />
-    <add key="Maximo_TOPANCESTOR" value="A" />
+    <add key="Maximo_TOPANCESTOR" value="VCCH" />
   </appSettings>
   <!--Web settings-->
   <system.web>
