--- a/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
@@ -14,6 +14,9 @@
   <!--app settings-->
   <applicationSettings>
     <ExcelAddInEquipmentDatabase.Properties.Settings>
+      <setting name="SiteName" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
+        <value xdt:Transform="Replace">VCG</value>
+      </setting>
       <setting name="EquiBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
         <value xdt:Transform="Replace">http:\\gensvw1178.gen.volvocars.net</value>
       </setting>
