--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -12,8 +12,9 @@
 
   <connectionStrings>
     <add name="EQUIConnectionString" connectionString="Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
-    <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqla001.gen.volvocars.net;initial catalog=GADATA;user id=EqUiAdmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+
+  <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+    Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -75,6 +76,9 @@
       </setting>
       <setting name="TemplateShema" serializeAs="String">
         <value>Equi</value>
+      </setting>
+      <setting name="SiteName" serializeAs="String">
+        <value>debug</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
