--- a/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
@@ -9,6 +9,11 @@
     <add name="EQUIConnectionString"
      connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+    <add name="EquiEntities"
+ connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+    Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin;App=EntityFramework&quot;"
+  xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
   <!--app settings-->
