--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -671,6 +671,7 @@
     <Compile Include="Areas\VWSC\VWSCAreaRegistration.cs" />
     <Compile Include="Areas\Welding\Controllers\AROController.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\HiddenSpotController.cs" />
+    <Compile Include="Areas\Welding\Controllers\DMLControllers\h_production_issuesController.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\StoringsIngaveController.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\ULplan_startController.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\UltralogInspectionsController.cs" />
@@ -730,6 +731,12 @@
     <Compile Include="Areas\Welding\Models\c_Picture.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Welding\Models\c_production_issue.cs">
+      <DependentUpon>WeldingModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Welding\Models\c_reporter.cs">
+      <DependentUpon>WeldingModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Welding\Models\c_Teardown.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
@@ -749,6 +756,9 @@
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Welding\Models\h_Nut_Bolt_Measure.cs">
+      <DependentUpon>WeldingModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\Welding\Models\h_production_issues.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\Welding\Models\h_weldmeasure.cs">
@@ -2873,6 +2883,11 @@
     <Content Include="Areas\VASC\Views\Eventlog\Get_rt_alarm.cshtml" />
     <Content Include="Areas\VASC\Views\Eventlog\_get_rt_alarm.cshtml" />
     <Content Include="Areas\Welding\Views\Welding\ppmreweld.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\Create.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\Delete.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\Details.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\Edit.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\Index.cshtml" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
