cleanup all running

--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -57,7 +57,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--global site settings-->
     <add key="SiteName" value="**defaultSiteName**" />
-    <add key="DisabledAreas" value="" />
+    <add key="DisabledAreas" value="Welding" />
     <add key="DatabufferNumShifts" value="9" />
     <add key="DatabufferNumDefaultHours" value="48" />
     <!--hangfire-->
