--- a/ExcelAddInEquipmentDatabase/app.Rel_VCH.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCH.config
@@ -11,7 +11,7 @@
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
 
     <add name="EquiEntities"
-    connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin;&quot;"
+    connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi;&quot;"
     xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   
   </connectionStrings>
@@ -23,7 +23,7 @@
         <value xdt:Transform="Replace">VCCH</value>
       </setting>
       <setting name="EquiBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">http:\chasvw1203.cha.volvocars.net</value>
+        <value xdt:Transform="Replace">http:\\chasvw1203.cha.volvocars.net</value>
       </setting>
       <setting name="TemplateBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
         <value xdt:Transform="Replace">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE_VCCH\Templates</value>
