sync test pictures

--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -732,6 +732,9 @@
     <Compile Include="Areas\Welding\Models\c_Picture.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Welding\Models\c_picture1.cs">
+      <DependentUpon>WeldingModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Welding\Models\c_production_issue.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
@@ -1088,6 +1091,7 @@
     <Content Include="Content\CustomHyperlinkBoxes.css" />
     <Content Include="Content\CustomStyleTweeks.css" />
     <Content Include="Content\fontawesome-all.css" />
+    <Content Include="Content\images\deuropeningLinksV316.png" />
     <Content Include="Content\images\volvo-50.png" />
     <Content Include="Content\jquery-cron.css" />
     <Content Include="Content\jquery-ui.css" />
@@ -2890,6 +2894,8 @@
     <Content Include="Areas\Welding\Views\h_production_issues\Edit.cshtml" />
     <Content Include="Areas\Welding\Views\h_production_issues\Index.cshtml" />
     <Content Include="Areas\Welding\Views\QteamConfig\Config.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\SpatterPicture.cshtml" />
+    <Content Include="Areas\Welding\Views\h_production_issues\AddSpatterPicture.cshtml" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
