--- a/ExcelAddInEquipmentDatabase/app.Rel_VCH.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCH.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
+<!--\\Chasvw1203.cha.volvocars.net\chasvw1203_e\IIS\EqUiWebUi\VSTO\ -->
+<!--https:chasvw1203.cha.volvocars.net/VSTO/ -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
@@ -23,10 +24,10 @@
         <value xdt:Transform="Replace">VCCH</value>
       </setting>
       <setting name="EquiBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">http:\\chasvw1203.cha.volvocars.net</value>
+        <value xdt:Transform="Replace">https:\\chasvw1203.cha.volvocars.net</value>
       </setting>
       <setting name="TemplateBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE_VCCH\Templates</value>
+        <value xdt:Transform="Replace">\\Chasvw1203.cha.volvocars.net\chasvw1203_e\IIS\EqUiWebUi\Resources\VSTO\TEMPLATES</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
