--- a/ExcelAddInEquipmentDatabase/app.DEV_VCG.config
+++ b/ExcelAddInEquipmentDatabase/app.DEV_VCG.config
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
+
+<!--\\GENSVW1178.gen.volvocars.net\gensvw1178_D\IIS\EqUiDev\VSTO\ -->
+<!--http://gensvw1178.gen.volvocars.net:666/VSTO/ -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
