--- a/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
+<!--\\GENSVW1178.gen.volvocars.net\gensvw1178_D\IIS\EqUiWebui\VSTO\ -->
+<!--https://gensvw1178.gen.volvocars.net/VSTO/ -->
+
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
@@ -23,10 +25,10 @@
         <value xdt:Transform="Replace">VCG</value>
       </setting>
       <setting name="EquiBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">http:\\gensvw1178.gen.volvocars.net</value>
+        <value xdt:Transform="Replace">https:\\gensvw1178.gen.volvocars.net</value>
       </setting>
       <setting name="TemplateBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\Templates</value>
+        <value xdt:Transform="Replace">\\GENSVW1178.gen.volvocars.net\gensvw1178_D\IIS\EqUiWebUi\Resources\VSTO\TEMPLATES</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
